force-app/main/default/objects/ssot__ActionableList__dlm/fields/ssot__AssigneeObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssigneeObject__c</fullName>
    <label>Assignee Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssigneeObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>