force-app/main/default/objects/ssot__ActionableList__dlm/fields/ssot__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ssot__ObjectName__c</fullName>
    <label>Object Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ObjectName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>