force-app/main/default/objects/ssot__ActionableList__dlm/fields/ssot__rel_1729238123494_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1729238123494_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ActionableList_AssigneeId_map_User_I_rel</label>
    <referenceTo>ssot__User__dlm</referenceTo>
    <relationshipLabel>ActionableList_AssigneeId_map_User_I_rel</relationshipLabel>
    <relationshipName>rel_1729238123494_end</relationshipName>
    <type>Lookup</type>
</CustomField>